2007-04-24  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/goption.h:
	* glib/goption.c (g_option_context_get_help): New function to
	get the formatted help string.  (#336089, Dom Lachowicz)

2007-04-24  Michael Natterer  <mitch@imendio.com>

	* tests/gobject/paramspec-test.c: test all GParamSpecString
	validations with static and allocated strings.

2007-04-19  William Jon McCann  <mccann@jhu.edu>

	* glib/gkeyfile.[ch]: (find_file_in_data_dirs),
	(g_key_file_load_from_dirs), (g_key_file_load_from_data_dirs):
	Add g_key_file_load_from_dirs for looking through a search
	path for a key-file. (#355334)

2007-04-15  Tor Lillqvist  <tml@novell.com>

	* build: Include the build module using the svn:externals
	mechanism.

	* Makefile.am
	* configure: Add the references to build back.

2007-04-11  Matthias Clasen  <mclasen@redhat.com>

	* glib/gspawn.c (g_spawn_async): Fix a doc typo.  (#427285, 
	Jochen Baier)

2007-04-11  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/ghash.[ch]: Add g_hash_table_get_keys() and
	g_hash_table_get_values(), API to retrieve the keys
	and values inside an hash table in list form. (#413133)

	* glib/glib.symbols: Update symbols.

	* tests/hash-test.c: Exercise newly added functions.

2007-04-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Use CFLAGS/LDFLAGS in addition to 
	PCRE_CFLAGS/PCRE_LIBS when checking system PCRE.  (#421607, 
	Paul Jarc)

2007-03-27  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gdate.h: Remove old comment and forward declaration of
	struct tm: gdate.h includes time.h now.

2007-03-23  Matthias Clasen  <mclasen@redhat.com> 

	* tests/gobject/Makefile.am: Handle $RANDOM missing.  (#356843,
	Paul Jarc)

2007-03-22  Matthias Clasen  <mclasen@redhat.com> 

	* glib/guniprop.c: Fix corner-cases of upper/lowercase conversion.
	(#418217, Denis Jacquerye)

2007-03-22  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gkeyfile.c: Track whether the last key=value pair in a group