@@ -1,3 +1,7 @@
+2007-04-25  Paolo Borellki  <pborelli@katamail.com>
+
+	* glib/gstrfuncs.c (g_strsplit): small cleanup. (#433387)
+
 2007-04-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/glib.symbols:
